Add SPs health check monitoring
