# api/v1alpha1/types.gen.go
@@ -55,6 +55,9 @@ type Provider struct {
 	// Endpoint Full endpoint URL where the provider API is accessible
 	Endpoint string `json:"endpoint"`
 
+	// HealthStatus Health status of the provider
+	HealthStatus *string `json:"health_status,omitempty"`
+
 	// Id Unique identifier for the Service Provider
 	Id *openapi_types.UUID `json:"id,omitempty"`
 
